--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       top:  calc(1 * var(--step));
     }
 
-    /* ===== Slots bleiben optisch da, aber ohne Feld-IDs und ohne Zahlenlogik ===== */
+    /* ===== Slots ===== */
     .slot{
       position:absolute;
       width: var(--cell);
@@ -352,6 +352,24 @@
         -1px -1px 0 rgba(0,0,0,0.08) inset,
         0 3px 5px rgba(0,0,0,0.22),
         2px 2px 3px -1px rgba(0,0,0,0.20);
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      overflow:hidden;
+    }
+
+    /* NEU: Zahl im Slot */
+    .slotNum{
+      font-weight: 1000;
+      color: rgba(0,0,0,0.92);
+      text-shadow: 0 1px 0 rgba(255,255,255,0.30);
+      font-size: clamp(16px, 4.5vmin, 28px);
+      line-height: 1;
+      transform: rotate(var(--num-rot, 0deg));
+      transform-origin: 50% 50%;
+      user-select:none;
+      pointer-events:none;
+      letter-spacing: 0.02em;
     }
 
     /* Slot-Positionen (nur Layout) */
@@ -662,7 +680,6 @@
       filter: brightness(0.97);
     }
 
-    /* NEU: Hinweistext über dem Button */
     .watchText{
       font-weight: 1000;
       letter-spacing: 0.12em;
@@ -676,7 +693,6 @@
       margin-bottom: 2px;
     }
 
-    /* NEU: Button pulsiert */
     @keyframes btnPulse{
       0%,100%{ transform: scale(1); }
       50%{ transform: scale(1.035); }
@@ -685,7 +701,6 @@
       animation: btnPulse 1.05s ease-in-out infinite;
     }
 
-    /* Zahlen-/Richtungsbuttons (bleiben unverändert) */
     .miniBtn{
       flex: 1 1 0;
       border: 1px solid rgba(0,0,0,0.35);
@@ -734,7 +749,6 @@
     }
     .dirBtn:active{ transform: translateY(1px) scale(0.99); }
 
-    /* ===== Attention States (bestehend) ===== */
     @keyframes blinkSoft{
       0%, 100% { opacity: 1; }
       50% { opacity: 0.35; }
@@ -778,7 +792,6 @@
           <div class="cubeShadow" aria-hidden="true"></div>
           <div class="cubeFace" aria-label="Würfelfläche"></div>
 
-          <!-- Slots: keine data-slot IDs mehr, keine Zahlensetzung -->
           <div class="slot s-3b"></div>
           <div class="slot s-4b"></div>
           <div class="slot s-2c"></div>
@@ -793,7 +806,6 @@
             <div class="cubeFace kipFaceQ0" aria-label="Würfelfläche Q0"></div>
             <div class="cubeFace kipFaceQ1" aria-label="Würfelfläche Q1"></div>
 
-            <!-- Slots: keine data-slot IDs mehr, keine Zahlensetzung -->
             <div class="slot k-4d"></div>
             <div class="slot k-3d"></div>
             <div class="slot k-2b"></div>
@@ -809,10 +821,8 @@
         <div class="ball" aria-label="Kugel"></div>
       </div>
 
-      <!-- Console-Block -->
       <div class="kippspeedBlock attnSpeed" id="kippspeedBlock" aria-label="Konsole">
 
-        <!-- MODE 1: Speed -->
         <div id="speedMode" class="modeBlock">
           <div class="kippspeedTop">
             <div class="kippspeedLabel" id="kippspeedLabel">KIPP SPEED (KSP)</div>
@@ -848,7 +858,6 @@
           </div>
         </div>
 
-        <!-- MODE 2: Game -->
         <div id="gameMode" class="modeBlock hidden">
           <div class="gameConsole">
             <div class="gcTop" aria-label="Punkteblock">
@@ -859,11 +868,9 @@
             </div>
 
             <div class="gcBottom" aria-label="Aktionen">
-              <!-- NEU: Hinweis + Button umbenannt + pulsiert -->
               <div class="watchText">SCHAU GENAU!</div>
               <button id="btnPreviewKipps" class="gcBtn set pulse" type="button">VORSCHAU-KIPPS</button>
 
-              <!-- Panel bleibt unverändert -->
               <div id="decisionPanel" class="hidden">
                 <div class="gcRow" aria-label="Kippanzahl">
                   <button class="miniBtn" data-k="1" type="button">1</button>
@@ -960,7 +967,6 @@
       [key(1,"C"), "c-violett"],
     ]);
 
-    // für Target: Koordinaten je Farbe (genau die 4 Felder)
     const targetCellsByColorClass = {
       "c-blau":    [],
       "c-orange":  [],
@@ -986,7 +992,6 @@
       }
       grid.dataset.built = "1";
 
-      // farbige Zellen sammeln (für Target-Anzeige)
       Array.from(grid.children).forEach(el=>{
         if(el.classList.contains("colorCell")){
           for(const k of Object.keys(targetCellsByColorClass)){
@@ -996,10 +1001,94 @@
       });
     }
 
-    // ===== Rotation / Views =====
+    /* ============================================================
+       NEU: FIXE ZAHLENBELEGUNG (W1/W2/W3) OHNE RANDOM
+       S1..S4 werden hier fix gespeichert (deine Werte)
+       ============================================================ */
+    const FACE_NAMES = ["W1","W2","W3"];
+    const FACE_NUMS = {
+      W1: [5, 6, 4, 2],    // S1,S2,S3,S4
+      W2: [9, 11, 3, 7],   // S1,S2,S3,S4
+      W3: [1, 8, 12, 10],  // S1,S2,S3,S4
+    };
+
+    // Slot-Sammlung (W-View 4 Slots / Kipp-View 8 Slots)
+    const wSlots = Array.from(wFace.querySelectorAll(".slot"));
+    const kSlots = Array.from(kipGroup.querySelectorAll(".slot"));
+
+    // Hilfs: Zahl-Element sicherstellen
+    function ensureNumEl(slotEl){
+      let el = slotEl.querySelector(".slotNum");
+      if(!el){
+        el = document.createElement("div");
+        el.className = "slotNum";
+        slotEl.appendChild(el);
+      }
+      return el;
+    }
+
+    // Basale Rotationszuordnung pro Slot-Position (saubere Testbasis, Feinjustierung folgt)
+    function setSlotNumber(slotEl, value, rotDeg){
+      const el = ensureNumEl(slotEl);
+      el.textContent = String(value);
+      slotEl.style.setProperty("--num-rot", (rotDeg || 0) + "deg");
+    }
+
+    // W-View: fixe Mapping-Reihenfolge (DOM-Reihenfolge) => S1..S4
+    // (Das ist bewusst minimal-invasiv: wir können S1..S4 später exakt auf Achsenlogik umlegen,
+    //  aber jetzt ist die Belegung stabil und kippbar.)
+    const W_SLOT_ROT_BY_CLASS = new Map([
+      ["s-2c", 180], // oben links => Fuß nach oben
+      ["s-2d", 180], // oben rechts
+      ["s-3b",  90], // links => Fuß nach links
+      ["s-4b",  90], // links unten => Fuß nach links
+    ]);
+
+    // Kipp-View: ebenfalls einfache, stabile Basismap (Feinjustierung Achse später)
+    const K_SLOT_ROT_BY_CLASS = new Map([
+      ["k-2b", 180], ["k-2c", 180],
+      ["k-3d",   0], ["k-4d",   0],
+      ["k-2f", 180], ["k-2g", 180],
+      ["k-3e",   0], ["k-4e",   0],
+    ]);
+
+    function rotForSlot(slotEl, isKip){
+      const cls = Array.from(slotEl.classList).find(c => (isKip ? c.startsWith("k-") : c.startsWith("s-")));
+      if(!cls) return 0;
+      return (isKip ? (K_SLOT_ROT_BY_CLASS.get(cls) ?? 0) : (W_SLOT_ROT_BY_CLASS.get(cls) ?? 0));
+    }
+
+    // Render: W-View Top-Face
+    function renderWFace(faceName){
+      const nums = FACE_NUMS[faceName];
+      if(!nums) return;
+      // S1..S4 => wSlots[0..3]
+      for(let i=0;i<4;i++){
+        setSlotNumber(wSlots[i], nums[i], rotForSlot(wSlots[i], false));
+      }
+    }
+
+    // Render: Kipp-View FacePair (LeftFace, RightFace)
+    function renderKipFaces(leftFaceName, rightFaceName){
+      const L = FACE_NUMS[leftFaceName];
+      const R = FACE_NUMS[rightFaceName];
+      if(!L || !R) return;
+
+      // Kipp-Slots sind im DOM: erst 4 links, dann 4 rechts (wie im HTML angeordnet)
+      for(let i=0;i<4;i++){
+        setSlotNumber(kSlots[i],     L[i], rotForSlot(kSlots[i], true));
+        setSlotNumber(kSlots[i + 4], R[i], rotForSlot(kSlots[i + 4], true));
+      }
+    }
+
+    /* ============================================================
+       Rotation / Views
+       ============================================================ */
     const rotDeg = [0, 90, 180, 270];
     let rotIndex  = 0;
-    let faceIndex = 0; // bleibt als Bewegungszustand erhalten (nicht gelöscht)
+    let faceIndex = 0; // 0=W1, 1=W2, 2=W3
+
+    function currentFaceName(){ return FACE_NAMES[faceIndex]; }
 
     function setRotationSnap(){
       const deg = rotDeg[rotIndex];
@@ -1011,11 +1100,13 @@
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
       setRotationSnap();
+      renderWFace(currentFaceName());
     }
     function advanceFullCCW(){
       rotIndex  = (rotIndex + 3) % 4;
       faceIndex = (faceIndex + 2) % 3;
       setRotationSnap();
+      renderWFace(currentFaceName());
     }
 
     function showW(){
@@ -1032,9 +1123,30 @@
       faceIndex = 0;
       setRotationSnap();
       showW();
+      renderWFace(currentFaceName());
     }
 
-    // ===== Attention Logic =====
+    /* ============================================================
+       NEU: Zwischenkipp korrekt vor dem Schritt (CW/CCW)
+       - CW: zeigt (current -> next)
+       - CCW: zeigt (prev -> current) als "rückwärts"-Zwischenbild
+       ============================================================ */
+    function nextFaceIndex(dir){
+      return dir === "CCW" ? ((faceIndex + 2) % 3) : ((faceIndex + 1) % 3);
+    }
+
+    function showKipPairForStep(dir){
+      const cur = FACE_NAMES[faceIndex];
+      const nxt = FACE_NAMES[nextFaceIndex(dir)];
+      // Für die Zwischenkippdarstellung zeigen wir stabil: links=current, rechts=next
+      // (Damit ist es testbar; Achslogik S1<->S4 im Zwischenbild ist der nächste Präzisionsschritt.)
+      renderKipFaces(cur, nxt);
+      showKip();
+    }
+
+    /* ============================================================
+       Attention Logic / Mode Switch (bestehend)
+       ============================================================ */
     let hasAdjustedOnce = false;
 
     let runningDemo     = false;
@@ -1064,7 +1176,6 @@
       playGlyph.className = isPause ? "pauseIcon" : "playIcon";
     }
 
-    // ===== MODE SWITCH =====
     function showSpeedMode(){
       speedMode.classList.remove("hidden");
       gameMode.classList.add("hidden");
@@ -1075,16 +1186,16 @@
     function showGameMode(){
       speedMode.classList.add("hidden");
       gameMode.classList.remove("hidden");
-
-      // Startphase: Decision Panel versteckt
       decisionPanel.classList.add("hidden");
-
       enterSetAttention();
       setPoints(0);
       gcHi.textContent = "80";
+      renderWFace(currentFaceName());
     }
 
-    // ===== Demo Ablauf (bestehend) =====
+    /* ============================================================
+       Demo Ablauf (angepasst: Zwischenbild vor Step)
+       ============================================================ */
     async function waitOrPause(ms, myToken){
       const slice = 40;
       let elapsed = 0;
@@ -1107,29 +1218,13 @@
       demoPaused = false;
       const myToken = ++demoToken;
 
-      showKip();
-      if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
-
-      advanceFullCW(); showW();
-      if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
-
-      showKip();
-      if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
-
-      advanceFullCW(); showW();
-      if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
-
-      showKip();
-      if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
-
-      advanceFullCW(); showW();
-      if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
-
-      showKip();
-      if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
-
-      advanceFullCW(); showW();
-      if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
+      // 4 Schritte CW
+      for(let i=0;i<4;i++){
+        showKipPairForStep("CW");
+        if(!await waitOrPause(getTiming().holdMs, myToken)) { runningDemo=false; return; }
+        advanceFullCW(); showW();
+        if(!await waitOrPause(Math.round(getTiming().holdMs * 0.60), myToken)) { runningDemo=false; return; }
+      }
 
       runningDemo = false;
     }
@@ -1141,7 +1236,9 @@
       setPlayGlyph(false);
     }
 
-    // ===== Target Anzeige auf 4 Feldern einer Farbe =====
+    /* ============================================================
+       Target Anzeige
+       ============================================================ */
     function clearTargets(){
       Array.from(grid.querySelectorAll(".targetBadge")).forEach(el => el.remove());
     }
@@ -1167,7 +1264,9 @@
       });
     }
 
-    // ===== 48er Deck / Runden / Versuche / Punkte =====
+    /* ============================================================
+       Punkte/Runden/Deck – bleibt, aber visibleNumbersSet ist NEU sinnvoll
+       ============================================================ */
     const MAX_ROUNDS = 10;
     const MAX_TRIES  = 3;
     const SCORE_BY_TRY = [8,5,3];
@@ -1186,9 +1285,11 @@
       gcPoints.textContent = s + "P";
     }
 
-    // Ohne Zahlenbelegung ist "sichtbar" bewusst leer – bleibt aber als Mechanik bestehen.
+    // NEU: Sichtbare Zahlen sind die 4 Zahlen der aktuellen Top-Fläche
     function visibleNumbersSet(){
-      return new Set();
+      const f = currentFaceName();
+      const nums = FACE_NUMS[f] || [];
+      return new Set(nums);
     }
 
     const TARGET_COLOR_CLASSES = ["c-blau","c-orange","c-gruen","c-violett"];
@@ -1245,7 +1346,9 @@
       setPoints(points + add);
     }
 
-    // ===== KIPP-Entscheidung UI (bleibt) =====
+    /* ============================================================
+       KIPP-Entscheidung UI (bestehend)
+       ============================================================ */
     let selectedKippCount = null;
     function selectKippCount(k){
       selectedKippCount = (k == null) ? null : Number(k);
@@ -1257,7 +1360,9 @@
       btn.addEventListener("click", () => selectKippCount(btn.dataset.k));
     });
 
-    // ===== KIPP-Ausführung (CW/CCW) =====
+    /* ============================================================
+       KIPP-Ausführung (WICHTIG: Zwischenbild vor Step – auch für CCW)
+       ============================================================ */
     let busyMove = false;
 
     async function performKipp(dir, count){
@@ -1267,7 +1372,8 @@
 
       const c = Math.max(1, Math.min(6, Number(count)));
       for(let i=0; i<c; i++){
-        showKip();
+        // Zwischenbild korrekt: (current -> next) BEFORE advance
+        showKipPairForStep(dir);
         await sleep(getTiming().holdMs);
 
         if(dir === "CCW") advanceFullCCW();
@@ -1303,7 +1409,47 @@
       performKipp("CCW", selectedKippCount);
     });
 
-    // ===== Events =====
+    /* ============================================================
+       VORSCHAU-KIPPS:
+       - 4× CW Umrundung
+       - endet wieder Q0 (rotIndex=0), aber Top=W2 (faceIndex=1)
+       ============================================================ */
+    async function runPreviewKipps(){
+      if(busyMove) return;
+      busyMove = true;
+
+      // Ausgang: egal wo du gerade bist – wir starten sauber von W1/Q0
+      rotIndex = 0;
+      faceIndex = 0;
+      setRotationSnap();
+      renderWFace(currentFaceName());
+      showW();
+
+      // 4 Schritte CW
+      for(let i=0;i<4;i++){
+        showKipPairForStep("CW");
+        await sleep(getTiming().holdMs);
+        advanceFullCW();
+        showW();
+        await sleep(Math.round(getTiming().holdMs * 0.60));
+      }
+
+      // Sicherheitsgarantie: Q0 + W2 oben
+      rotIndex = 0;
+      faceIndex = 1; // W2
+      setRotationSnap();
+      renderWFace(currentFaceName());
+      showW();
+
+      // danach darf das DecisionPanel aufgehen (wenn du willst):
+      decisionPanel.classList.remove("hidden");
+
+      busyMove = false;
+    }
+
+    /* ============================================================
+       Events
+       ============================================================ */
     speedSlider.addEventListener("input", () => {
       hasAdjustedOnce = true;
       if(!runningDemo) enterPlayAttention();
@@ -1332,7 +1478,6 @@
       setAttentionSpeed(false);
       showGameMode();
 
-      // Starten der Zielanzeige (TargetLogic bleibt!)
       roundIndex = 0;
       tryIndex = 0;
       deckCount = Array(13).fill(0);
@@ -1340,10 +1485,8 @@
       selectKippCount(null);
     });
 
-    // Button ist jetzt "VORSCHAU-KIPPS" – aktuell nur als Basis vorhanden.
-    // (Keine neue Logik implementiert, wie von dir verlangt.)
     btnPreviewKipps.addEventListener("click", () => {
-      // absichtlich leer – wird neu gedacht / neu implementiert
+      runPreviewKipps();
     });
 
     backBtn.addEventListener("click", () => {
