--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
       --btn-text: #2a160c;
       --btn-border: rgba(0,0,0,0.35);
 
-      --ui-panel-bg: #7a3f2b;
-      --ui-text: #ead7be;
+      --ui-panel-bg: #7a3f2b;   /* rotbraun */
+      --ui-text: #ead7be;       /* hellbeige */
 
       --kippstrip-h: auto;
 
@@ -84,7 +84,7 @@
       align-items:center;
     }
 
-    /* ===== HEADER (NEU) ===== */
+    /* ===== HEADER ===== */
     .titleRow{
       width: 100%;
       display:flex;
@@ -106,7 +106,7 @@
       cursor: pointer;
 
       background: transparent;
-      border: 2px solid rgba(0,0,0,0.20);
+      border: 2px solid rgba(0,0,0,0.55); /* fein eingerahmt wie gewünscht */
       box-shadow:
         0 10px 16px rgba(0,0,0,0.10);
     }
@@ -114,7 +114,7 @@
       font-weight: 1000;
       font-size: 26px;
       line-height: 1;
-      color: rgba(0,0,0,0.80);
+      color: rgba(0,0,0,0.88);
       text-shadow: 0 1px 0 rgba(255,255,255,0.30);
       transform: translateY(-0.5px);
     }
@@ -193,7 +193,7 @@
       border-radius: var(--cell-radius);
       box-sizing: border-box;
       box-shadow: none;
-      position: relative; /* für Target-Overlay */
+      position: relative;
     }
 
     .c-orange{ background: var(--orange); }
@@ -217,8 +217,9 @@
       left:50%;
       top:50%;
       transform: translate(-50%, -50%);
-      font-weight: 1000;
-      font-size: clamp(14px, 4.6vmin, 22px);
+      font-weight: 900;
+      /* exakt wie Slot-Zahlen */
+      font-size: clamp(18px, 8vmin, 36px);
       color: rgba(0,0,0,0.92);
       text-shadow: 0 1px 0 rgba(255,255,255,0.35);
       line-height: 1;
@@ -228,12 +229,16 @@
       animation: targetBreath 1.25s ease-in-out infinite;
       transform-origin: 50% 50%;
       will-change: transform, opacity;
+      display:flex;
+      align-items:center;
+      justify-content:center;
     }
-    /* Rotation so, dass Zahlenkopf nach innen zeigt (= von außen lesbar) */
-    .trot-top    { transform: translate(-50%, -50%) rotate(180deg); }
-    .trot-bottom { transform: translate(-50%, -50%) rotate(0deg); }
-    .trot-left   { transform: translate(-50%, -50%) rotate(90deg); }
-    .trot-right  { transform: translate(-50%, -50%) rotate(-90deg); }
+
+    /* ✅ EINZIGE REGEL: Zahlenfuß zeigt zur Boxmitte */
+    .trot-top    { transform: translate(-50%, -50%) rotate(0deg); }
+    .trot-bottom { transform: translate(-50%, -50%) rotate(180deg); }
+    .trot-left   { transform: translate(-50%, -50%) rotate(-90deg); } /* links: CCW */
+    .trot-right  { transform: translate(-50%, -50%) rotate(90deg); }  /* rechts: CW */
 
     /* ===== FLOOR ===== */
     .floor{
@@ -585,30 +590,10 @@
       cursor: pointer;
     }
 
-    .speedScale{
-      width: 100%;
-      padding: 0 12px 2px;
-      box-sizing: border-box;
-      display:grid;
-      grid-template-columns: 1fr repeat(10, 1fr) 1fr;
-      align-items:center;
-      pointer-events:none;
-      opacity: 0.95;
-    }
-    .speedScale .num{
-      grid-row: 1;
-      font-weight: 1000;
-      font-size: 12px;
-      color: rgba(234,215,190,0.92);
-      text-shadow: 0 1px 0 rgba(0,0,0,0.35);
-      text-align:center;
-      letter-spacing: 0.02em;
-      user-select:none;
-    }
-    .speedScale .padL{ grid-column: 1; }
-    .speedScale .padR{ grid-column: 12; }
+    /* ✅ Speed-Skala: komplett ohne Zahlen */
+    .speedScale{ display:none; }
 
-    /* ===== Game Console (NEU) ===== */
+    /* ===== Game Console ===== */
     .gameConsole{
       width:100%;
       height:100%;
@@ -688,13 +673,34 @@
       filter: brightness(0.97);
     }
 
+    /* ===== KIPPANZAHL Label ===== */
+    .kippCountTitle{
+      font-weight: 1000;
+      letter-spacing: 0.10em;
+      text-transform: uppercase;
+      color: var(--ui-text);
+      text-shadow: 0 1px 0 rgba(0,0,0,0.35);
+      font-size: 16px;
+      line-height: 1.05;
+      text-align: center;
+      user-select:none;
+      margin-top: 8px;  /* etwas runtergerückt */
+      margin-bottom: 2px;
+    }
+
+    /* ===== Kippanzahl Buttons ===== */
     .miniBtn{
       flex: 1 1 0;
       border: 1px solid rgba(0,0,0,0.35);
       background: rgba(234,215,190,0.95);
       color: #2a160c;
       font-weight: 1000;
-      padding: 10px 0;
+
+      /* ✅ Zahl größer/formatfüllender */
+      font-size: clamp(18px, 4.2vmin, 28px);
+      line-height: 1;
+
+      padding: 14px 0;
       border-radius: 10px;
       cursor: pointer;
       user-select:none;
@@ -704,30 +710,13 @@
         0 0 0 1px rgba(255,255,255,0.12) inset;
     }
     .miniBtn:active{ transform: translateY(1px) scale(0.99); }
+
     .miniBtn.sel{
-      background: var(--ui-panel-bg);
-      color: var(--ui-text);
+      background: var(--ui-panel-bg); /* rotbraun */
+      color: var(--ui-text);         /* hellbeige */
       border-color: rgba(0,0,0,0.55);
     }
 
-    .dirBtn{
-      flex: 1 1 0;
-      border: 1px solid rgba(0,0,0,0.35);
-      background: var(--ui-panel-bg);
-      color: var(--ui-text);
-      font-weight: 1000;
-      padding: 12px 0;
-      border-radius: 12px;
-      cursor: pointer;
-      user-select:none;
-      -webkit-tap-highlight-color: transparent;
-      box-shadow:
-        0 10px 18px rgba(0,0,0,0.20),
-        0 0 0 1px rgba(255,255,255,0.10) inset;
-    }
-    .dirBtn:active{ transform: translateY(1px) scale(0.99); }
-
-    /* ===== Attention States (bestehend) ===== */
     @keyframes blinkSoft{
       0%, 100% { opacity: 1; }
       50% { opacity: 0.35; }
@@ -743,6 +732,17 @@
 
     .attnPlay #btnPlay{ animation: blinkSoft 0.9s ease-in-out infinite; }
     .attnSet .gcBtn.set{ animation: blinkSoft 0.85s ease-in-out infinite; }
+
+    /* ✅ Pulsieren versetzt (nur wenn Panel Klasse pulseSeq hat) */
+    #decisionPanel.pulseSeq .miniBtn{
+      animation: pulseSoft 1.15s ease-in-out infinite;
+    }
+    #decisionPanel.pulseSeq .miniBtn:nth-child(1){ animation-delay: 0.00s; }
+    #decisionPanel.pulseSeq .miniBtn:nth-child(2){ animation-delay: 0.10s; }
+    #decisionPanel.pulseSeq .miniBtn:nth-child(3){ animation-delay: 0.20s; }
+    #decisionPanel.pulseSeq .miniBtn:nth-child(4){ animation-delay: 0.30s; }
+    #decisionPanel.pulseSeq .miniBtn:nth-child(5){ animation-delay: 0.40s; }
+    #decisionPanel.pulseSeq .miniBtn:nth-child(6){ animation-delay: 0.50s; }
   </style>
 </head>
 
@@ -824,20 +824,7 @@
             <img class="speedIcon" src="kippspeed_hase_tight.png" alt="schnell">
           </div>
 
-          <div class="speedScale" aria-hidden="true">
-            <div class="num padL"></div>
-            <div class="num" style="grid-column:2">1</div>
-            <div class="num" style="grid-column:3">2</div>
-            <div class="num" style="grid-column:4">3</div>
-            <div class="num" style="grid-column:5">4</div>
-            <div class="num" style="grid-column:6">5</div>
-            <div class="num" style="grid-column:7">6</div>
-            <div class="num" style="grid-column:8">7</div>
-            <div class="num" style="grid-column:9">8</div>
-            <div class="num" style="grid-column:10">9</div>
-            <div class="num" style="grid-column:11">10</div>
-            <div class="num padR"></div>
-          </div>
+          <div class="speedScale" aria-hidden="true"></div>
         </div>
 
         <!-- MODE 2: Game -->
@@ -856,6 +843,8 @@
 
               <!-- Phase B: Kipp-Entscheidung -->
               <div id="decisionPanel" class="hidden">
+                <div class="kippCountTitle">KIPPANZAHL?</div>
+
                 <div class="gcRow" aria-label="Kippanzahl">
                   <button class="miniBtn" data-k="1" type="button">1</button>
                   <button class="miniBtn" data-k="2" type="button">2</button>
@@ -865,10 +854,7 @@
                   <button class="miniBtn" data-k="6" type="button">6</button>
                 </div>
 
-                <div class="gcRow" aria-label="Richtung">
-                  <button id="btnDirCCW" class="dirBtn" type="button">⟲</button>
-                  <button id="btnDirCW"  class="dirBtn" type="button">⟳</button>
-                </div>
+                <!-- ✅ Richtungsbuttons komplett entfernt -->
               </div>
             </div>
 
@@ -900,8 +886,6 @@
 
     const btnSetNumbers = document.getElementById("btnSetNumbers");
     const decisionPanel = document.getElementById("decisionPanel");
-    const btnDirCW      = document.getElementById("btnDirCW");
-    const btnDirCCW     = document.getElementById("btnDirCCW");
 
     const gcPoints    = document.getElementById("gcPoints");
     const gcHi        = document.getElementById("gcHi");
@@ -951,7 +935,6 @@
       [key(1,"C"), "c-violett"],
     ]);
 
-    // für Target: Koordinaten je Farbe (genau die 4 Felder)
     const targetCellsByColorClass = {
       "c-blau":    [],
       "c-orange":  [],
@@ -977,7 +960,6 @@
       }
       grid.dataset.built = "1";
 
-      // farbige Zellen sammeln (für Target-Anzeige)
       Array.from(grid.children).forEach(el=>{
         if(el.classList.contains("colorCell")){
           for(const k of Object.keys(targetCellsByColorClass)){
@@ -1002,7 +984,7 @@
       return pool.slice(0, count);
     }
 
-    // ===== Rotation / Views =====
+    // ===== Rotation / Views (nur CW) =====
     const rotDeg = [0, 90, 180, 270];
     let rotIndex  = 0;
     let faceIndex = 0;
@@ -1016,11 +998,6 @@
     function advanceFullCW(){
       rotIndex  = (rotIndex + 1) % 4;
       faceIndex = (faceIndex + 1) % 3;
-      setRotationSnap();
-    }
-    function advanceFullCCW(){
-      rotIndex  = (rotIndex + 3) % 4;
-      faceIndex = (faceIndex + 2) % 3;
       setRotationSnap();
     }
 
@@ -1080,7 +1057,7 @@
       renderWEmpty();
     }
 
-    // ===== Attention Logic (bestehend) =====
+    // ===== Attention Logic =====
     let hasAdjustedOnce = false;
 
     let runningDemo     = false;
@@ -1124,16 +1101,14 @@
     function showGameMode(){
       speedMode.classList.add("hidden");
       gameMode.classList.remove("hidden");
-      // Startphase: Zahlen setzen sichtbar, Decision Panel versteckt
       btnSetNumbers.classList.remove("hidden");
       decisionPanel.classList.add("hidden");
       enterSetAttention();
-      // Punkteanzeige clean
       setPoints(0);
       gcHi.textContent = "80";
     }
 
-    // ===== Demo Ablauf (bestehend) =====
+    // ===== Demo Ablauf =====
     async function waitOrPause(ms, myToken){
       const slice = 40;
       let elapsed = 0;
@@ -1190,7 +1165,7 @@
       setPlayGlyph(false);
     }
 
-    // ===== Zahlensetzen (bestehend) =====
+    // ===== Zahlensetzen =====
     let planned = [
       [null,null,null,null],
       [null,null,null,null],
@@ -1219,27 +1194,13 @@
       const [f1,f2,f3,f4] = face;
       return [f4, f3, f2, f1];
     }
-    function mapHiddenToVisible_CCW(face){
-      const [f1,f2,f3,f4] = face;
-      return [f2, f1, f4, f3];
-    }
 
-    function renderKip(dir){
+    function renderKip(){
       setRotationSnap();
       const curr = sets[faceIndex];
-
-      if(dir === "CCW"){
-        const nextFaceIndex = (faceIndex + 2) % 3;
-        const next = sets[nextFaceIndex];
-        for(let i=0;i<4;i++) renderNumber(slotTargetsKipRight[i], curr[i]);
-        const nextPreview = mapHiddenToVisible_CCW(next);
-        for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i], nextPreview[i]);
-        return;
-      }
-
-      // CW default
       const nextFaceIndex = (faceIndex + 1) % 3;
       const next = sets[nextFaceIndex];
+
       for(let i=0;i<4;i++) renderNumber(slotTargetsKipRight[i], curr[i]);
       const nextPreview = mapHiddenToVisible_CW(next);
       for(let i=0;i<4;i++) renderNumber(slotTargetsKipLeft[i], nextPreview[i]);
@@ -1278,7 +1239,7 @@
       ensureAssigned(0); renderW();
       if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
 
-      showKip(); renderKip("CW");
+      showKip(); renderKip();
       if(!(await (async()=>{ await sleep(getTiming().holdMs); return (myToken===setToken); })())) { runningSet=false; return; }
 
       advanceFullCW(); showW(); renderWEmpty();
@@ -1287,7 +1248,7 @@
       ensureAssigned(1); renderW();
       if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
 
-      showKip(); renderKip("CW");
+      showKip(); renderKip();
       if(!(await (async()=>{ await sleep(getTiming().holdMs); return (myToken===setToken); })())) { runningSet=false; return; }
 
       advanceFullCW(); showW(); renderWEmpty();
@@ -1296,17 +1257,15 @@
       ensureAssigned(2); renderW();
       if(!(await (async()=>{ await sleep(Math.round(getTiming().holdMs * 0.5)); return (myToken===setToken); })())) { runningSet=false; return; }
 
-      showKip(); renderKip("CW");
+      showKip(); renderKip();
       if(!(await (async()=>{ await sleep(getTiming().holdMs); return (myToken===setToken); })())) { runningSet=false; return; }
 
-      // Ende: wieder Vollansicht
       advanceFullCW();
       showW();
       renderW();
 
       runningSet = false;
 
-      // Jetzt beginnt die Spielerphase
       beginPlayerPhase();
     }
 
@@ -1321,14 +1280,12 @@
     }
 
     function sideClassForCoord(coord){
-      // coord wie "3A"
       const r = parseInt(coord, 10);
       const c = coord.replace(String(r), "");
       if(r === 1) return "trot-top";
       if(r === 8) return "trot-bottom";
       if(c === "A") return "trot-left";
       if(c === "H") return "trot-right";
-      // sollte bei unseren farbigen Rahmenfeldern nicht passieren
       return "trot-bottom";
     }
 
@@ -1346,11 +1303,11 @@
     // ===== 48er Deck / Runden / Versuche / Punkte =====
     const MAX_ROUNDS = 10;
     const MAX_TRIES  = 3;
-    const SCORE_BY_TRY = [8,5,3]; // try 1..3
+    const SCORE_BY_TRY = [8,5,3];
 
-    let deckCount = Array(13).fill(0); // 1..12, max 4
-    let roundIndex = 0;   // 0..9
-    let tryIndex   = 0;   // 0..2
+    let deckCount = Array(13).fill(0);
+    let roundIndex = 0;
+    let tryIndex   = 0;
     let points     = 0;
 
     let currentTargetNumber = null;
@@ -1374,7 +1331,6 @@
     function pickNewTarget(){
       const visible = visibleNumbersSet();
 
-      // eligible numbers: not visible + count < 4
       const eligible = [];
       for(let n=1; n<=12; n++){
         if(deckCount[n] >= 4) continue;
@@ -1383,14 +1339,11 @@
       }
 
       if(eligible.length === 0){
-        // Sicherheitsfall: wenn "nicht sichtbar" nichts mehr hergibt, dann Deck resetten
-        // (du hast "Ausnahmesituation" erwähnt – hier ist die stabile Sicherheitslösung)
         deckCount = Array(13).fill(0);
         for(let n=1; n<=12; n++){
           if(!visible.has(n)) eligible.push(n);
         }
         if(eligible.length === 0){
-          // wirklich alles sichtbar? dann nehmen wir irgendwas (sollte praktisch nicht passieren)
           for(let n=1; n<=12; n++) eligible.push(n);
         }
       }
@@ -1406,27 +1359,54 @@
       showTargetOnColor(colorClass, n);
     }
 
+    // ===== Kipp-Entscheidung UI =====
+    let selectedKippCount = null;
+
+    function startPulse(){
+      decisionPanel.classList.add("pulseSeq");
+    }
+    function stopPulse(){
+      decisionPanel.classList.remove("pulseSeq");
+    }
+
+    function selectKippCount(k){
+      selectedKippCount = (k == null) ? null : Number(k);
+      document.querySelectorAll('.miniBtn[data-k]').forEach(btn=>{
+        btn.classList.toggle("sel", Number(btn.dataset.k) === selectedKippCount);
+      });
+      if(selectedKippCount != null) stopPulse();
+    }
+
+    document.querySelectorAll('.miniBtn[data-k]').forEach(btn=>{
+      btn.addEventListener("click", () => {
+        if(busyMove) return;
+        selectKippCount(btn.dataset.k);
+        // sofort ausführen (nur CW)
+        performKippCW(selectedKippCount);
+      });
+    });
+
     function beginPlayerPhase(){
-      // UI umschalten
       btnSetNumbers.classList.add("hidden");
       decisionPanel.classList.remove("hidden");
-      enterSetAttention(false);
+      enterSetAttention();
 
-      // Spielzustand
       roundIndex = 0;
       tryIndex = 0;
-      setPoints(points); // bleibt
+      setPoints(points);
       gcHi.textContent = "80";
 
       deckCount = Array(13).fill(0);
       pickNewTarget();
+
+      // Start: keine Auswahl, Pulse läuft
       selectKippCount(null);
+      startPulse();
     }
 
     function endGame(){
       clearTargets();
       alert("10 Runden vorbei! Punkte: " + points);
-      // zurück zur Speed-Ansicht
       showSpeedMode();
     }
 
@@ -1445,73 +1425,50 @@
       setPoints(points + add);
     }
 
-    // ===== Kipp-Entscheidung UI =====
-    let selectedKippCount = null;
-    function selectKippCount(k){
-      selectedKippCount = (k == null) ? null : Number(k);
-      document.querySelectorAll('.miniBtn[data-k]').forEach(btn=>{
-        btn.classList.toggle("sel", Number(btn.dataset.k) === selectedKippCount);
-      });
-    }
-
-    document.querySelectorAll('.miniBtn[data-k]').forEach(btn=>{
-      btn.addEventListener("click", () => selectKippCount(btn.dataset.k));
-    });
-
-    // ===== Kipp-Ausführung (CW/CCW) =====
+    // ===== Kipp-Ausführung (nur CW) =====
     let busyMove = false;
 
-    async function performKipp(dir, count){
+    async function performKippCW(count){
       if(busyMove) return;
-      if(!selectedKippCount) return;
+      if(!count) return;
+
       busyMove = true;
 
       const c = Math.max(1, Math.min(6, Number(count)));
+
       for(let i=0; i<c; i++){
         showKip();
-        renderKip(dir);
+        renderKip();
         await sleep(getTiming().holdMs);
 
-        if(dir === "CCW") advanceFullCCW();
-        else advanceFullCW();
+        advanceFullCW();
 
         showW();
         renderW();
         await sleep(Math.round(getTiming().holdMs * 0.60));
       }
 
-      // Trefferprüfung (Minimalregel): Zielzahl sichtbar?
       const vis = visibleNumbersSet();
       const hit = vis.has(currentTargetNumber);
 
       if(hit){
         awardForTry();
-        // neues Ziel, nächste Runde
         nextRoundOrEnd();
       }else{
         tryIndex++;
         if(tryIndex >= MAX_TRIES){
-          // neues Ziel (Runde zählt trotzdem weiter)
           nextRoundOrEnd();
-        }else{
-          // gleiches Ziel bleibt – nur nächste Chance
-          // (Zielzahl bleibt stehen)
         }
       }
+
+      // ✅ Nach Ende: Taste wieder beige + Pulsieren startet neu
+      selectKippCount(null);
+      startPulse();
 
       busyMove = false;
     }
 
-    btnDirCW.addEventListener("click", () => {
-      if(!selectedKippCount) return;
-      performKipp("CW", selectedKippCount);
-    });
-    btnDirCCW.addEventListener("click", () => {
-      if(!selectedKippCount) return;
-      performKipp("CCW", selectedKippCount);
-    });
-
-    // ===== Events (bestehend + neu) =====
+    // ===== Events =====
     speedSlider.addEventListener("input", () => {
       hasAdjustedOnce = true;
       if(!runningDemo) enterPlayAttention();
@@ -1546,7 +1503,6 @@
       await runSetNumbersCycle();
     });
 
-    // ↩︎ Zurück: übernimmt STOP-Funktion (zur Speed-Ansicht)
     backBtn.addEventListener("click", () => {
       cancelDemo();
       cancelSetNumbers();
